objects/Google_Analytics_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Customer_Id_Dimension__c</fullName>
        <label>Customer Id Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type_Dimension__c</fullName>
        <label>Customer Type Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Tag_Manager_Container_Id__c</fullName>
        <label>Google Tag Manager Container Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Id__c</fullName>
        <label>Tracking Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Google Analytics Settings</label>
</CustomObject>